<resources>
    <string name="app_name" translatable="false">TimeTracker</string>
    <string name="tasca_start_button">Start</string>
    <string name="tasca_stop_button">Stop</string>
    <string name="formulari_nom_activitat">Nom:</string>
    <string name="formulari_nom_activitat_hint">Nom de l\'activitat&#8230;</string>
    <string name="formulari_tipus_dactivitat">Tipus d\'activitat:</string>
    <string name="formulari_descripcio">Descripció:</string>
    <string name="formulari_descripcio_hint">Descripció de l\'activitat&#8230;</string>
    // &#8230; = ...
    <string name="formulari_boto_crear">Crear</string>
    <string name="formulari_opcio_projecte">Projecte</string>
    <string name="formulari_opcio_tasca">Tasca</string>
    <string name="formulari_boto_tornar_enrere">Cancel·lar</string>
    <string name="formulari_check_autoStart">Arrencada automàtica</string>
    <string name="formulari_check_autoEnd">Parada automàtica</string>
    <string name="opcions_dialog">Opcions</string>
    <string name="array_opcions_dialog_md">Més detalls</string>
    <string name="array_opcions_dialog_ed">Editar</string>
    <string name="array_opcions_dialog_el">Eliminar</string>
    <string name="edit_dialog">Editar activitat</string>
    <string name="OK">Acceptar</string>
    <string name="nom_buit">Nom buit</string>
    <string name="descripcio_buida">Descripció buida</string>
    <string name="auto_start_desc">La tasca començarà cada dia a les</string>
    <string name="auto_end_desc">La tasca es pararà cada dia a les</string>
    <string name="title_nova_activitat">Afegir nova activitat</string>
    <string name="title_detalls_tasca">Detalls de la tasca</string>
    <string name="title_detalls_projecte">Detalls del projecte</string>
    <string name="warning">Atenció!</string>
    <string name="warning_exit_app">Hi ha tasques cronomentrant-se. Estàs segur que vols tancar l\'aplicació?</string>
    <string name="opcio_simple">Simple</string>
    <string name="opcio_detallat">Detallat</string>
    <string name="data_inici">Data d\'inici:</string>
    <string name="data_fi">Data final:</string>
    <string name="format_informe">Format:</string>
    <string name="generar_informe">Generar</string>
    <string name="informe_generat">S\'ha generat l\'informe</string>
    <string name="generar_informe_title">Generar informe</string>
    <string name="format_text_pla">Text pla</string>
    <string name="format_web">Web</string>
    <string name="format_pdf">PDF</string>
    <string name="interval_data_inici">Des de:</string>
    <string name="interval_data_fi">Fins a:</string>
    <string name="durada">Durada:</string>
    <string name="detalls_data_inici">Data inici:</string>
    <string name="datalls_data_fi">Data fi:</string>
    <string name="tipus_informe">Tipus d\'informe:</string>
    <string name="title_options_language">Escull l\'idioma</string>
    <string name="option_language_ca" translatable="false">Català</string>
    <string name="option_language_es" translatable="false">Español</string>
    <string name="option_language_en" translatable="false">English</string>
    <string name="option_language_zh" translatable="false">中文</string>
</resources>
